<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="ap_name">ChatiyApa</string>
    <string name="mainpage">Mainpage</string>
    <string name="welcome_to_chat">Welcome to chat</string>
    <string name="log_out">Log Out</string>
    <string name="create_account">Create Account</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="password">Password</string>
    <string name="display_name1">Display Name</string>
    <string name="email">Email</string>
    <string name="create_a_c">Create A/c</string>
    <string name="all_user">Users</string>
    <string name="profile">Profile</string>
    <string name="all_setting">Settings</string>
    <string name="log_in">Log In</string>
    <string name="open">Open</string>
    <string name="close">Close</string>>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_name" tools:ignore="DuplicateDefinition">Display Name</string>
    <string name="hi_there_i_m_using_chat_app">Hi there, I\'m using Chat App</string>
    <string name="change_image">Change image</string>

</resources>
